SchemaForm with Bootstrap and without Material working

--- a/gui/inventory-web/app/src/home/view/home.html
+++ b/gui/inventory-web/app/src/home/view/home.html
@@ -3,5 +3,6 @@
     <h1>Lager Verwaltung</h1>
 
     <p><a href="#/login">Logout</a></p>
-    <p><a href="#/entities/users">Users</a></p>
+    <a ui-sref="home.users">Users</a>
+    <div ui-view></div>
 </div>
