--- a/gui/inventory-web/app/src/entities/view/browseEntities.html
+++ b/gui/inventory-web/app/src/entities/view/browseEntities.html
@@ -1,33 +1,2 @@
-<div flex layout="column" ng-controller="EntitiesController as ul" >
+<form sf-schema="schema" sf-form="form" sf-model="model"></form>
 
-    <!-- Container #1 (in wireframe) -->
-    <md-toolbar layout="row" class="md-whiteframe-z2">
-        <md-button class="menu" hide-gt-sm ng-click="ul.toggleList()" aria-label="Show Entity List">
-            <md-icon md-svg-icon="menu" ></md-icon>
-        </md-button>
-        <h1>Lager Verwaltung</h1>
-    </md-toolbar>
-
-    <!-- Container #2 (in wireframe) -->
-    <div flex layout="row">
-
-        <!-- Container #3 (in wireframe) -->
-        <md-sidenav md-is-locked-open="$mdMedia('gt-sm')" class="md-whiteframe-z2" md-component-id="left" layout="column">
-            <md-list layout="column">
-                <md-list-item ng-repeat="it in ul.entities">
-                    <md-button ng-click="ul.selectEntity(it)" ng-class="{'selected' : it === ul.selected }">
-                        {{it.name}}
-                    </md-button>
-                </md-list-item>
-            </md-list>
-        </md-sidenav>
-
-        <!-- Container #4 (in wireframe) -->
-        <md-content flex id="content">
-            <md-icon md-svg-icon="{{ul.selected.avatar}}" class="avatar"></md-icon>
-            <h2>{{ul.selected.name}}</h2>
-            <p>{{ul.selected.content}}</p>
-        </md-content>
-
-    </div>
-</div>
