Basic List of entities

--- a/gui/inventory-web/app/src/home/view/home.html
+++ b/gui/inventory-web/app/src/home/view/home.html
@@ -1,8 +1,4 @@
 <div flex layout="column">
 
-    <h1>Lager Verwaltung</h1>
-
-    <p><a href="#/login">Logout</a></p>
-    <a ui-sref="home.users">Users</a>
-    <div ui-view></div>
+    Home
 </div>
