--- a/gui/inventory-web/app/src/authentication/view/login.html
+++ b/gui/inventory-web/app/src/authentication/view/login.html
@@ -1,5 +1,5 @@
 <div ng-show="error" class="alert alert-danger">{{error}}</div>
-<form class="navbar-form navbar-right" role="login" ng-show="!globals.currentUser">
+<form class="navbar-form navbar-right" role="login" ng-show="!$root.globals.currentUser">
     <div class="form-group">
         <label for="username">Username</label>
         <input type="text" name="username" id="username" class="form-control" ng-model="username" required/>
@@ -8,6 +8,6 @@
     </div>
     <button type="button" ng-disabled="form.$invalid || dataLoading" class="btn btn-default btn-sm" ng-click="login()">Login</button>
 </form>
-<div class="navbar-text navbar-right" ng-show="globals.currentUser">Hello {{globals.currentUser.username}}
+<div class="navbar-text navbar-right" ng-show="$root.globals.currentUser">Hello {{globals.currentUser.username}}
     <button type="button" class="btn btn-default btn-sm" ng-click="logout()">Logout</button>
 </div>
