--- a/gui/inventory-web/app/src/authentication/view/login.html
+++ b/gui/inventory-web/app/src/authentication/view/login.html
@@ -8,6 +8,6 @@
     </div>
     <button type="button" ng-disabled="form.$invalid || dataLoading" class="btn btn-default btn-sm" ng-click="login()">Login</button>
 </form>
-<div class="navbar-text navbar-right" ng-show="$root.globals.currentUser">Hello {{globals.currentUser.username}}
+<div class="navbar-text navbar-right" ng-show="$root.globals.currentUser">Hello {{user}}
     <button type="button" class="btn btn-default btn-sm" ng-click="logout()">Logout</button>
 </div>
