--- a/gui/inventory-web/app/src/entities/view/entities.edit.html
+++ b/gui/inventory-web/app/src/entities/view/entities.edit.html
@@ -1,1 +1,1 @@
-<form sf-schema="schema" sf-form="form" sf-model="model"></form>
+<form sf-schema="schema" sf-form="form" sf-model="model" ng-submit="onSubmit(form)"></form>
