--- a/gui/inventory-web/app/src/authentication/view/login.html
+++ b/gui/inventory-web/app/src/authentication/view/login.html
@@ -1,7 +1,20 @@
 <div ng-show="error" class="alert alert-danger">{{error}}</div>
 <div class="navbar-form navbar-right" ng-show="!authenticated">
-    <a href="/oauth/login?redirect_uri=http://localhost:8765/web/index.html">login</a>
+    <a href="http://localhost:8765/web/index.html">login</a>
 </div>
 <div class="navbar-text navbar-right" ng-show="authenticated">Hello {{userName}}
     <button type="button" class="btn btn-default btn-sm" ng-click="logout()">Logout</button>
 </div>
+
+<!--<div class="navbar-text navbar-right">-->
+    <!--<oauth-->
+            <!--site="http://localhost:8899/uaa"-->
+            <!--client-id="web"-->
+            <!--redirect-uri="http://localhost:8765/web/index.html"-->
+            <!--profile-uri="http://localhost:8765/api/user"-->
+            <!--scope="read"-->
+            <!--text="Anmelden"-->
+            <!--template="jspm_packages/npm/oauth-ng@0.4.5/dist/views/templates/default.html"-->
+    <!--&gt;-->
+    <!--</oauth>-->
+<!--</div>-->
